--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.45.4",
+    "react-icons": "^4.10.1",
     "recoil": "^0.7.7",
     "typescript": "5.1.6",
     "zod": "^3.21.4"
