--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/open-sans": "^5.0.8",
     "@hookform/resolvers": "^3.2.0",
+    "@tanstack/react-query": "^4.32.6",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
