--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/open-sans": "^5.0.8",
     "@hookform/resolvers": "^3.2.0",
     "@tanstack/react-query": "^4.32.6",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "@types/node": "20.4.9",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
