--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^10.15.1",
     "moment": "^2.29.4",
     "next": "13.4.13",
+    "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
